# Petcare-RAG

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  import_db.py  main.py  pyproject.toml  requirements.txt
data/: test_finetune_chunks.json  test_scenario_pro.json  url.txt
outputs/: benchmark_raw_report_20260527_102810.txt  benchmark_raw_report_20260527_124204.txt  deepeval_results.json  deepeval_results_finetuning.json  generated_answers.json  greetings_report.txt
scratch/: test_different_tasks.py  test_markdown_splitter.py  test_pipeline.py
src/: bm25_retriever.py  config.py  data_loader.py  hybrid_retriever.py  intent_router.py  jina_embeddings.py  jina_reranker.py  prompts.py  rag_chain.py  semantic_cache.py  service_db.py  text_processor.py  tools.py  vector_store.py
src/api/: main.py
src/db/: crud.py  database.py  models.py
tests/deep_eval/: deepeval.py  generate_answers.py  run_deepeval.py
tests/unit_test/: generate_qa.py  test_cache.py  test_extreme_greetings.py  test_intent_router.py  test_parent_child.py  test_tool_calculations.py  tune_pdr.py
